tests/baselines/reference/Protected3.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(2,3): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(2,13): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(2,27): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(3,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(2,3): error TS2304: Cannot find name 'protected'.
tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts(2,13): error TS2304: Cannot find name 'constructor'.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected3.ts (6 errors) ====
    class C {
      protected constructor() { }
      ~~~~~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                ~~~~~~~~~~~
!!! error TS1005: ';' expected.
                              ~
!!! error TS1005: ';' expected.
      ~~~~~~~~~
!!! error TS2304: Cannot find name 'protected'.
                ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'constructor'.
    }
    ~
!!! error TS1128: Declaration or statement expected.